# lab2_sequence

./: .gitignore  CMakeLists.txt
inc/: ArraySequence.hpp  DynamicArray.hpp  DynamicArray.tpp  LinkedList.hpp  ListSequence.hpp  Sequence.hpp  SequenceWrap.hpp  mainwindow.hpp  ui.hpp  util.hpp
inc/tmplInc/: ArraySequence.hpp  DynamicArray.hpp  LinkedList.hpp  ListSequence.hpp  Sequence.hpp  Wrapper.hpp
inc/ui/: mainwindow.hpp
src/: main.cpp
src/console/: CMakeLists.txt  main.cpp
src/tmpl/: ArraySequence.tpp  DynamicArray.tpp  LinkedList.tpp  ListSequence.tpp
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
tests/: CMakeLists.txt  main.cpp
tmpl/: ArraySequence.tpp  DynamicArray.tpp
